# python-grocery-products-scrapper

./: .gitignore  README.md  pyproject.toml  vercel.json
.github/workflows/: release.yml
.idx/: dev.nix
app/: main.py  requirements.txt  vercel.json
app/static/: ui.html
app/static/css/: styles.css
app/static/js/: app.js
src/: runner.ipynb
src/surquest/utils/scrappers/ocado/: handler.py  scrapper.py
src/surquest/utils/scrappers/tesco/: __init__.py  facets.py  graphql.product.gql  graphql.products.gql  graphql.taxonomy.gql  handler.py  scrapper.py
tests/: pytest.ini
